# sentry-vendor-risk-intel

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  requirements.txt
.github/agents/: Debugger.agent.md
config/: prompts.py  settings.py
data/: alternatives_seed.yaml
data/seed/: apple_network.json
data/synthetic/: vendor_registry.json
docs/: ROADMAP.md
memory/: MEMORY.md  country-normalization.md  known-issues-and-gaps.md  mock-footprint-path.md  project-overview.md  remediation-progress.md
scripts/: amd_start.py  generate_demo.py  run_pipeline.py  setup_amd.sh
src/: __init__.py  models.py
src/agents/: footprint_agent.py  report_agent.py  risk_agent.py  watchlist_agent.py
src/dashboard/: html_generator.py
src/data_sources/: aggregator.py  news_client.py  sec_edgar.py  (+3 more)
tests/: test_risk_scorer.py
vendor-risk-intel/: pyproject.toml  requirements-amd.txt
vendor-risk-intel/config/: prompts.py  risk_weights.yaml
vendor-risk-intel/data/synthetic/: generate_synthetic.py  vendor_registry.json
vendor-risk-intel/notebooks/: 01_pipeline_demo.ipynb  02_gpu_inference.ipynb
vendor-risk-intel/src/: models.py
vendor-risk-intel/src/agents/: footprint_agent.py  watchlist_agent.py
vendor-risk-intel/src/dashboard/: html_generator.py
vendor-risk-intel/src/dashboard/templates/: dashboard.html.j2
vendor-risk-intel/src/data_sources/: sec_edgar.py  yfinance_client.py
vendor-risk-intel/src/graph/: cascading_risk.py  supply_chain_graph.py
vendor-risk-intel/src/llm/: __init__.py  interface.py
vendor-risk-intel/src/pipeline/: workflow.py
(+11 files in other folders)
